syntax = "proto3";

package monitor;
option go_package = ".;monitor";

message ThreadsDetail {
  repeated uint32 threads_status = 1; //线程状态
  repeated uint64 threads_count = 2; //线程工作量
}


// 定义线程池基本状态信息
message Status {
  string name = 1;
  uint64 total_task = 2;       //总下发任务数
  uint64 total_retry = 3;             // 总重试任务数
  uint64 total_result = 4;        // 已完成任务总数
  uint64 retry_size = 5;             // 重试队列大小
  ThreadsDetail threads_detail = 6; 
}

  
message StreamStatusRequest {
  int64 interval = 1;     // 数据推送间隔
}



service MonitorService {
  rpc StreamStatus (StreamStatusRequest) returns (stream Status);
}
  